--- a/apps/ecom-frontend/src/app/shop/product-card/product-card.component.html
+++ b/apps/ecom-frontend/src/app/shop/product-card/product-card.component.html
@@ -1,7 +1,8 @@
 <div class="flex justify-start cursor-pointer" [routerLink]="['/product', product().publicId]">
   <div class="flex flex-col justify-center rounded-xl w-full min-h-[400px] h-full shadow-xl">
     <figure class="flex justify-center items-center h-full">
-      <img [src]="'data:' + product().pictures[0].mimeType + ';base64,' + product().pictures[0].file"
+      <img class="fixed-image-height"
+           [src]="'data:' + product().pictures[0].mimeType + ';base64,' + product().pictures[0].file"
            alt="{{product().name}}" width="250px" />
     </figure>
     <div class="p-5 justify-end">
